The register is so hard
Signed-off-by: LIUSU3 <>

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/HomePage.css" type="text/css" />
     <script type="text/javascript" src="javaScript/UserController.js"></script>
     <script type="text/javascript" src="javaScript/Map.js"></script>
+    <script type="text/javascript" src="javaScript/SuggestionPanel.js"></script>
 
     <body>
         <div id="container">
